--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
         
         #starfield { position: fixed; top: 0; left: 0; z-index: 0; pointer-events: none; }
 
-        /* UI LAYERS */
+        /* Твоя оригинальная сетка (HUD) */
         .hud-layer { position: relative; z-index: 10; display: grid; grid-template-columns: 320px 1fr 320px; height: 100vh; padding: 20px; gap: 20px; pointer-events: none; }
         .hud-layer > * { pointer-events: auto; }
 
@@ -23,7 +23,7 @@
         .panel { background: rgba(0,20,40,0.6); border: 1px solid rgba(0,242,255,0.2); backdrop-filter: blur(10px); padding: 20px; position: relative; }
         .panel::before { content: ''; position: absolute; top: -1px; left: -1px; width: 15px; height: 15px; border-top: 2px solid var(--neon); border-left: 2px solid var(--neon); }
 
-        /* CHAT SYSTEM */
+        /* Чат - высота как в оригинале, но с фиксом */
         #chat-panel { display: flex; flex-direction: column; height: 500px; }
         #chat-stream { flex: 1; overflow-y: auto; margin-bottom: 15px; padding-right: 10px; }
         #chat-stream::-webkit-scrollbar { width: 4px; }
@@ -31,30 +31,28 @@
 
         .msg-container { margin-bottom: 15px; padding: 10px; border-left: 2px solid var(--pink); background: rgba(255,0,255,0.05); }
         
-        /* НИКИ И ВРЕМЯ - ПОЖИРНЕЕ */
-        .msg-nick { color: var(--neon); font-weight: 900; font-size: 14px; text-shadow: 0 0 8px var(--neon); }
-        .msg-time { color: var(--pink); font-size: 11px; font-weight: 700; margin-left: 10px; }
+        /* НИКИ СУПЕР ЖИРНЫЕ */
+        .msg-nick { color: var(--neon); font-weight: 900 !important; font-size: 14px; text-shadow: 0 0 8px var(--neon); }
+        .msg-time { color: var(--pink); font-size: 11px; font-weight: 700 !important; margin-left: 10px; }
         .msg-text { font-size: 13px; margin-top: 5px; }
 
         input { background: rgba(0,0,0,0.5); border: 1px solid var(--neon); color: var(--neon); padding: 10px; outline: none; width: 100%; }
 
-        /* AUDIO VISUALIZER */
-        #audio-btn { width: 50px; height: 50px; border: 1px solid var(--neon); display: flex; align-items: center; justify-content: center; }
-        #audio-btn.playing { border-color: var(--pink); box-shadow: 0 0 20px var(--pink); }
+        #audio-btn { width: 40px; height: 40px; border: 1px solid var(--neon); display: flex; align-items: center; justify-content: center; cursor: pointer; }
         .bar { width: 3px; background: var(--neon); margin: 0 2px; height: 10px; }
         .playing .bar { animation: pulse 0.5s infinite alternate; background: var(--pink); }
         @keyframes pulse { from { height: 5px; } to { height: 20px; } }
 
-        /* AUTH GATE */
+        /* Твой оригинальный логин */
         #auth-gate { position: fixed; inset: 0; background: #000; z-index: 1000; display: flex; align-items: center; justify-content: center; }
         .auth-box { width: 350px; text-align: center; }
         .btn { border: 1px solid var(--neon); color: var(--neon); padding: 10px 20px; margin-top: 10px; cursor: pointer; transition: 0.3s; display: inline-block; width: 100%; }
         .btn:hover { background: var(--neon); color: #000; }
         .hidden { display: none !important; }
 
-        /* --- ПРАВКА ДЛЯ МОБИЛОК --- */
+        /* Адаптивность ТОЛЬКО для телефонов (уменьшаем чат) */
         @media (max-width: 768px) {
-            #chat-panel { height: 250px !important; } /* Уменьшили высоту чата */
+            #chat-panel { height: 240px !important; } 
             .hud-layer { grid-template-columns: 1fr; overflow-y: auto; }
             header { grid-column: 1; }
         }
@@ -142,7 +140,7 @@ const Core = {
         toggle() {
             const b = document.getElementById('audio-btn');
             if(this.el.paused) { 
-                this.el.play().catch(e => console.log("Interacted needed")); 
+                this.el.play().catch(e => console.log("User interaction needed")); 
                 b.classList.add('playing'); 
             } else { 
                 this.el.pause(); 
