--- a/index.html
+++ b/index.html
@@ -137,7 +137,7 @@ const Core = {
     Audio: {
         playing: false,
         setup() { 
-            this.el = new Audio('https://www.soundhelix.com/examples/mp3/SoundHelix-Song-8.mp3'); 
+            this.el = new Audio('track.mp3'); 
             this.el.loop = true; 
             this.el.volume = 0.2;
         },
