--- a/index.html
+++ b/index.html
@@ -160,7 +160,7 @@ const Core = {
     },
 
     Audio: {
-        setup() { this.el = new Audio('https://www.soundhelix.com/examples/mp3/SoundHelix-Song-8.mp3'); this.el.loop = true; this.el.volume = 0.2; },
+        setup() { this.el = new Audio('track.mp3'); this.el.loop = true; this.el.volume = 0.2; },
         toggle() { this.el.paused ? this.el.play() : this.el.pause(); }
     },
 
