--- a/index.html
+++ b/index.html
@@ -1,8 +1,10 @@
 <!DOCTYPE html>
 <html lang="ru">
 <head>
-     <meta charset="UTF-8">
+    <meta charset="UTF-8">
     <title>ORBITRON v10.1</title>
+    
+    <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     
     <link rel="stylesheet" href="style.css">
 
@@ -12,6 +14,7 @@
 </head>
 <body>
 <canvas id="starfield"></canvas>
+
 <div id="auth-gate">
     <div class="auth-form">
         <h1>STATION_LOGIN</h1>
@@ -54,9 +57,5 @@
         </div>
     </div>
 </div>
-
-<script>
-
-</script>
 </body>
 </html>
