--- a/index.html
+++ b/index.html
@@ -2,60 +2,57 @@
 <html lang="ru">
 <head>
     <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>ORBITRON v10.1</title>
-    
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
-    
-    <link rel="stylesheet" href="style.css">
-
+    <link rel="stylesheet" href="style.css?v=1.1">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-
-    <script src="script.js" defer></script>
+    <script src="script.js?v=1.1" defer></script>
 </head>
 <body>
-<canvas id="starfield"></canvas>
+    <canvas id="starfield"></canvas>
 
-<div id="auth-gate">
-    <div class="auth-form">
-        <h1>STATION_LOGIN</h1>
-        <div class="auth-input-group">
-            <label>YOUR_MAIL</label>
-            <input type="email" id="email" placeholder="---" autocomplete="off">
-        </div>
-        <div class="auth-input-group">
-            <label>YOUR_PASSWORD</label>
-            <input type="password" id="pass" placeholder="---">
-        </div>
-        <button class="login-btn" onclick="Core.Auth()">INITIATE_SESSION</button>
-        <button class="login-btn" onclick="Core.Register()" style="margin-top: 10px; border-color: var(--p); color: var(--p);">CREATE_NEW_PILOT</button>
-    </div>
-</div>
-
-<div class="os-container">
-    <header>
-        <div>ORBITRON_OS v10.1</div>
-        <div id="clock">00:00:00</div>
-        <div class="audio-link" id="audio-btn" onclick="Core.Audio.toggle()">
-            <div class="bars"><div class="bar"></div><div class="bar"></div><div class="bar"></div></div>
-            <span>LINK_AUDIO</span>
-        </div>
-    </header>
-    <div class="main-area">
-        <aside class="panel todo-panel">
-            <div style="padding:15px; font-size:10px; border-bottom:1px solid var(--border)">MISSION_LOGS</div>
-            <div class="input-box"><input type="text" id="todo-in" placeholder="..."></div>
-            <div id="todo-list"></div>
-        </aside>
-        <div class="chat-wrapper">
-            <main class="panel chat-panel">
-                <div id="chat-stream"></div>
-                <div class="input-box">
-                    <input type="text" id="chat-in">
-                    <button onclick="Core.Chat.send()">SEND</button>
-                </div>
-            </main>
+    <div id="auth-gate">
+        <div class="auth-form">
+            <h1>STATION_LOGIN</h1>
+            <div class="auth-input-group">
+                <label for="email">YOUR_MAIL</label>
+                <input type="email" id="email" placeholder="---" autocomplete="off">
+            </div>
+            <div class="auth-input-group">
+                <label for="pass">YOUR_PASSWORD</label>
+                <input type="password" id="pass" placeholder="---">
+            </div>
+            <button class="login-btn" onclick="Core.Auth()">INITIATE_SESSION</button>
+            <button class="login-btn" onclick="Core.Register()" style="margin-top: 10px; border-color: var(--p); color: var(--p);">CREATE_NEW_PILOT</button>
         </div>
     </div>
-</div>
+
+    <div class="os-container">
+        <header>
+            <div>ORBITRON_OS v10.1</div>
+            <div id="clock">00:00:00</div>
+            <div class="audio-link" id="audio-btn" onclick="Core.Audio.toggle()">
+                <div class="bars"><div class="bar"></div><div class="bar"></div><div class="bar"></div></div>
+                <span>LINK_AUDIO</span>
+            </div>
+        </header>
+        <div class="main-area">
+            <aside class="panel todo-panel">
+                <div style="padding:15px; font-size:10px; border-bottom:1px solid var(--border)">MISSION_LOGS</div>
+                <div class="input-box"><input type="text" id="todo-in" placeholder="..."></div>
+                <div id="todo-list"></div>
+            </aside>
+            <div class="chat-wrapper">
+                <main class="panel chat-panel">
+                    <div id="chat-stream"></div>
+                    <div class="input-box">
+                        <input type="text" id="chat-in" placeholder="TYPE_MESSAGE...">
+                        <button onclick="Core.Chat.send()">SEND</button>
+                    </div>
+                </main>
+            </div>
+        </div>
+    </div>
 </body>
 </html>
