--- a/index.html
+++ b/index.html
@@ -12,35 +12,48 @@
 <body>
     <canvas id="starfield"></canvas>
 
-    <div id="ui-layer">
+    <div class="os-container">
+        
         <header>
-            <div id="system-status"><span class="blink">●</span> SYSTEM_ACTIVE</div>
+            <div id="system-status"><span class="blink">●</span> SYSTEM_READY</div>
             <div style="display: flex; align-items: center; gap: 20px;">
                 <div id="clock">00:00:00</div>
-                <button onclick="Core.Logout()" style="background: none; border: 1px solid #0ff; color: #0ff; font-family: 'Orbitron'; cursor: pointer; padding: 2px 10px;">[ EXIT ]</button>
+                <button onclick="Core.Logout()">[ TERMINATE_SESSION ]</button>
             </div>
         </header>
 
-        <main>
-            <section class="panel" id="chat-panel">
-                <div class="panel-header">COMM_LINK</div>
-                <div id="chat-stream"></div>
-                <div class="input-area">
-                    <input type="text" id="chat-in" placeholder="SEND_MESSAGE...">
+        <div class="main-area">
+            
+            <section class="panel todo-panel">
+                <div style="padding: 15px; border-bottom: 1px solid var(--border); font-family: 'Orbitron'; font-size: 12px;">MISSION_OBJECTIVES</div>
+                <div style="padding: 15px;">
+                    <input type="text" id="todo-in" placeholder="ADD_OBJECTIVE..." style="width: 100%;">
                 </div>
-            </section>
-
-            <section class="panel" id="todo-panel">
-                <div class="panel-header">OBJECTIVES</div>
-                <input type="text" id="todo-in" placeholder="ADD_TASK...">
                 <div id="todo-list"></div>
             </section>
-        </main>
 
-        <footer>
-            <button id="audio-btn" onclick="Core.Audio.toggle()">AMB_ATMOSPHERE</button>
-            <div id="coords">LOC: L1_STATION</div>
-        </footer>
+            <div class="chat-wrapper">
+                <section class="panel chat-panel">
+                    <div style="padding: 15px; border-bottom: 1px solid var(--border); font-family: 'Orbitron'; font-size: 12px;">COMM_LINK</div>
+                    <div id="chat-stream"></div>
+                    <div class="input-box">
+                        <input type="text" id="chat-in" placeholder="TYPE_MESSAGE..." maxlength="100">
+                    </div>
+                </section>
+            </div>
+
+        </div>
+
+        <div style="margin-top: 20px; display: flex; justify-content: space-between; align-items: center;">
+            <div class="audio-link" id="audio-btn" onclick="Core.Audio.toggle()">
+                <div class="bars">
+                    <div class="bar"></div><div class="bar"></div><div class="bar"></div><div class="bar"></div>
+                </div>
+                <span>AMB_ATMOSPHERE</span>
+            </div>
+            <div style="font-size: 10px; opacity: 0.5;">LOC: ORBIT_STATION_L1</div>
+        </div>
+
     </div>
 </body>
 </html>
