--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
             <div id="system-status"><span class="blink">●</span> SYSTEM_READY</div>
             <div style="display: flex; align-items: center; gap: 20px;">
                 <div id="clock">00:00:00</div>
-                <button onclick="Core.Logout()">[ TERMINATE_SESSION ]</button>
+                <button onclick="Core.Logout()">[ ABANDON_SHIP ]</button>
             </div>
         </header>
 
@@ -49,7 +49,7 @@
                 <div class="bars">
                     <div class="bar"></div><div class="bar"></div><div class="bar"></div><div class="bar"></div>
                 </div>
-                <span>AMB_ATMOSPHERE</span>
+                <span>MUSIC_ENGINE</span>
             </div>
             <div style="font-size: 10px; opacity: 0.5;">LOC: ORBIT_STATION_L1</div>
         </div>
