--- a/index.html
+++ b/index.html
@@ -10,6 +10,8 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div id="custom-menu"></div>
+    
     <canvas id="starfield"></canvas>
 
     <div class="os-container">
