--- a/index.html
+++ b/index.html
@@ -10,8 +10,9 @@
     <script src="script.js" defer></script>
 </head>
 <body>
+    <div id="notify-container"></div>
     <div id="custom-menu"></div>
-    
+
     <canvas id="starfield"></canvas>
 
     <div class="os-container">
