--- a/index.html
+++ b/index.html
@@ -7,7 +7,9 @@
     <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Share+Tech+Mono&display=swap" rel="stylesheet">
     <link rel="stylesheet" href="style.css">
     <script src="https://cdn.jsdelivr.net/npm/@supabase/supabase-js@2"></script>
-    <script src="script.js" defer></script>
+    <script src="script.js"></script>
+
+<script type="module" src="script.js"></script>
 </head>
 <body>
     <div id="notify-container"></div>
